2003-02-04  Gary Thomas  <gary@mind.be>

	* src/xilinx-load.c: 
	* src/uE250_plx.c: 
	* src/uE250_pci.c: 
	* src/uE250_misc.c: 
	* src/uE250_ide.c: 
	* src/uE250_plx_bitstream.h: 
	* src/uE250_pci_bitstream.h: 
	* misc/redboot_ROM.ecm: 
	* misc/redboot_RAM.ecm: 
	* include/pkgconf/mlt_arm_xscale_uE250_romram.mlt: 
	* include/pkgconf/mlt_arm_xscale_uE250_romram.ldi: 
	* include/pkgconf/mlt_arm_xscale_uE250_romram.h: 
	* include/pkgconf/mlt_arm_xscale_uE250_rom.mlt: 
	* include/pkgconf/mlt_arm_xscale_uE250_rom.ldi: 
	* include/pkgconf/mlt_arm_xscale_uE250_rom.h: 
	* include/pkgconf/mlt_arm_xscale_uE250_ram.mlt: 
	* include/pkgconf/mlt_arm_xscale_uE250_ram.ldi: 
	* include/pkgconf/mlt_arm_xscale_uE250_ram.h: 
	* include/uE250.h: 
	* include/plx.h: 
	* include/plf_mmap.h: 
	* include/hal_plf_ints.h: 
	* include/plf_io.h: 
	* include/hal_platform_setup.h: 
	* cdl/hal_arm_xscale_uE250.cdl: 
	New package - support for NMI uE250 (Xscale PXA250) platform.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//